# glam_px_shapes

./: Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: main.rs
codegen/templates/: circle.rs.tera  mod.rs.tera  rectangle.rs.tera
codegen/templates/shapes/: circle.rs.tera  line_segment.rs.tera  rectangle.rs.tera
src/: circle.rs  glam.rs  lib.rs  rectangle.rs
src/circle/: circle_ivec2.rs  circle_uvec2.rs  circle_vec2.rs
src/iters/: circle_iter.rs  common.rs  line_iter.rs  line_iter_vec2.rs  mod.rs  rect_iter.rs
src/ivec2/: circle.rs  line_iter.rs  line_segment.rs  mod.rs  rectangle.rs
src/rectangle/: rectangle_ivec2.rs  rectangle_uvec2.rs  rectangle_vec2.rs
src/uvec2/: circle.rs  line_segment.rs  mod.rs  rectangle.rs
src/vec2/: circle.rs  line_iter.rs  line_segment.rs  rectangle.rs
