[package]
name = "glam_px_shapes"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
path = "src/lib.rs"


[features]



[dependencies]
glam = { version = ">= 0.25", features = ["core-simd", "approx", "fast-math"] }
automod = "1.0.14"
approx = "0.5.1"
strum = { version = "0.26.2", features = ["derive"] }

[workspace]
resolver = "2"
members = [
    "codegen",
]
